# AgenticCrawler

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALLATION.md  LICENSE  README.md  SECURITY.md  acrawl  acrawl.cmd  glama.json  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  smithery.yaml  test_output.txt  tree.txt
crates/acrawl-cli/: Cargo.toml
crates/acrawl-cli/src/: app.rs  display_width.rs  error.rs  format.rs  init.rs  main.rs  markdown.rs  mcp_install.rs  mcp_server.rs  output_sink.rs  render.rs  self_update.rs  session_mgr.rs  tool_format.rs  uninstall.rs
crates/acrawl-cli/src/app/: api_client.rs  classic_repl.rs  mod.rs  model_support.rs  resume.rs  runtime_builder.rs  tool_executor.rs
crates/acrawl-cli/src/auth/: anthropic.rs  custom.rs  mod.rs  openai.rs
crates/acrawl-cli/src/tui/: active_modal.rs  auth_modal.rs  child_tabs.rs  events.rs  grouped_model_list.rs  input_field.rs  mod.rs  modal.rs  model_list.rs  model_modal.rs  repl_app.rs  repl_render.rs  session_modal.rs  tool_panel.rs
crates/acrawl-cli/tests/: child_escalation_test.rs  mcp_stdio.rs
crates/acrawl-mcp/: Cargo.toml
crates/acrawl-mcp/src/: main.rs
crates/acrawl-mcp/tests/: stdio.rs
crates/agent/: Cargo.toml
crates/agent/src/: action_cache.rs  agent.rs  child_events.rs  confidence.rs  failure_classifier.rs  lib.rs  loop_detector.rs  manager.rs  output.rs  page_fingerprint.rs  prompt.rs  registry.rs  script_manager.rs  self_healing.rs  shared_client.rs  state.rs  url_claim.rs
crates/agent/src/aria/: from_js.rs  mod.rs  node.rs  reconcile.rs  serialize.rs
crates/agent/src/implementation/: fork.rs  lifecycle.rs  mod.rs
crates/agent/src/script_executor/: control_flow.rs  data.rs  mod.rs  parallel.rs  tests.rs
crates/agent/src/semantic/: mod.rs
crates/agent/src/tools/: accessibility.rs  cancel_script.rs  cancel_subagent.rs  click.rs  click_at.rs  coverage.rs  execute_js.rs  feedback.rs  fill_form.rs  fork.rs  get_page_info.rs  go_back.rs  hover.rs  html_diff.rs  intercept_network.rs  list_archive.rs  list_resources.rs  list_scripts.rs  mod.rs  navigate.rs  network_activity.rs  page_logs.rs  page_map.rs  page_performance.rs  press_key.rs  read_content.rs  read_document.rs  read_pdf.rs  read_script.rs  read_spreadsheet.rs  ref_resolve.rs  refresh.rs  run_script.rs  save_file.rs  save_script.rs  screenshot.rs  script_status.rs  scroll.rs  select_option.rs  seq.rs  (+12 more)
crates/agent/tests/: child_events_test.rs  extension_e2e_test.rs  integration_test.rs  script_integration.rs
crates/api/: Cargo.toml
crates/api/src/: bedrock.rs  client.rs  codex.rs  copilot.rs  credentials.rs  error.rs  gemini.rs  lib.rs  models.rs  oauth.rs  openai.rs  provider_types.rs  responses.rs  sse.rs  types.rs
crates/api/src/provider/: anthropic.rs  bedrock.rs  catalog.rs  custom.rs  factory.rs  mod.rs  openai.rs  preset.rs  registry.rs  transform.rs
crates/api/tests/: client_integration.rs
crates/browser/: Cargo.toml
crates/browser/src/: aria.rs  aria_walk_js.rs  browser_backend.rs  context.rs  extension.rs  fetch.rs  lib.rs  markdown.rs  observation.rs  playwright.rs  prune.rs  ref_map.rs  testing.rs
crates/browser/src/playwright/: backend_impl.rs  bridge.rs  bridge_script.rs  mod.rs  tests.rs  types.rs
crates/browser/src/ws_server/: mod.rs  session.rs
crates/browser/tests/: fixtures.rs  observation_integration.rs  public_api.rs
crates/cli/: Cargo.toml
crates/cli/src/: format.rs  main.rs  markdown.rs  mcp_install.rs  mcp_server.rs  model_download.rs  output_sink.rs  self_update.rs  session_mgr.rs  tool_format.rs
crates/cli/src/app/: api_client.rs  mod.rs  resume.rs  runtime_builder.rs  session.rs  slash.rs  title_namer.rs  tool_executor.rs  turn.rs
crates/cli/src/auth/: anthropic.rs  mod.rs  openai.rs
crates/cli/src/tui/: events.rs  grouped_model_list.rs
crates/cli/tests/: child_escalation_test.rs  mcp_stdio.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: agent.rs  browser.rs  browser_backend.rs  child_events.rs  extension.rs  fetcher.rs  lib.rs  manager.rs  markdown.rs  output.rs  playwright.rs  prompt.rs  shared_client.rs  state.rs  tool_effect.rs  tool_registry.rs  url_claim.rs  ws_server.rs
crates/crawler/src/agent/: fork.rs  lifecycle.rs  mod.rs
crates/crawler/src/tools/: cancel_subagent.rs  click.rs  done.rs  execute_js.rs  extract_data.rs  feedback.rs  fill_form.rs  fork.rs  go_back.rs  hover.rs  list_resources.rs  mod.rs  navigate.rs  page_map.rs  press_key.rs  read_content.rs  save_file.rs  screenshot.rs  scroll.rs  select_option.rs  subagent_status.rs  switch_tab.rs  wait.rs  wait_for_human.rs  wait_for_subagents.rs
crates/crawler/src/ws_server/: auth.rs  http.rs  mod.rs
crates/crawler/tests/: child_events_test.rs  extension_e2e_test.rs  integration_test.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: installer.rs  lib.rs  server.rs
crates/processing/: Cargo.toml
crates/processing/src/: archive.rs  document.rs  error.rs  image_proc.rs  lib.rs  pdf.rs  spreadsheet.rs  transcribe.rs
crates/processing/tests/: integration_archive.rs  integration_csv.rs  integration_image.rs
crates/processing/tests/fixtures/: sample.csv
crates/render/: Cargo.toml
crates/render/src/: format.rs  lib.rs  markdown.rs  sink.rs  tool_format.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bash.rs  bootstrap.rs  budget.rs  compact.rs  config.rs  config_ops.rs  control.rs  conversation.rs  hooks.rs  lib.rs  mcp_stdio.rs  oauth.rs  observer.rs  prompt.rs  remote.rs  session.rs  settings.rs  summary_compression.rs  update_check.rs  usage.rs
crates/script/: Cargo.toml
crates/script/src/: error.rs  grammar.rs  lib.rs  parser.rs  persistence.rs
crates/tui/: Cargo.toml
crates/tui/src/: active_modal.rs  child_tabs.rs  events.rs  lib.rs  modal.rs  model_list.rs  repl_app.rs  repl_render.rs  tool_pairing.rs
crates/tui/tests/: session_resume.rs
crates/ui/: Cargo.toml
crates/ui/src/: config_runner.rs  display_width.rs  error.rs  events.rs  lib.rs  output_sink.rs  session_mgr.rs
(+202 files in other folders)
