[workspace]
members = [
    "crates/agent",
    "crates/cli",
    "crates/runtime",
    "crates/api",
    "crates/commands",
    "crates/crawler",
    "crates/core",
    "crates/browser",
]
resolver = "2"

[workspace.dependencies]
agent = { path = "crates/agent" }

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT"
publish = false
description = "LLM-powered web crawler — describe a goal in plain English, get structured data back"
repository = "https://github.com/Mingye-Lu/AgenticCrawler"
homepage = "https://github.com/Mingye-Lu/AgenticCrawler"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
