[workspace]
members = [
    "crates/agent",
    "crates/cli",
    "crates/mcp-server",
    "crates/render",
    "crates/runtime",
    "crates/api",
    "crates/commands",
    "crates/core",
    "crates/browser",
    "crates/tui",
    "crates/ui",
    "crates/script",
]
resolver = "2"

[workspace.dependencies]
agent = { path = "crates/agent" }
mcp-server = { path = "crates/mcp-server" }
render = { path = "crates/render" }

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "MIT"
publish = false
description = "LLM-powered web crawler — describe a goal in plain English, get structured data back"
repository = "https://github.com/Mingye-Lu/AgenticCrawler"
homepage = "https://github.com/Mingye-Lu/AgenticCrawler"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
