[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-crawler"
version = "0.1.0"
description = "An autonomous LLM-powered web crawler"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "rich>=13.0",
    "structlog>=24.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
agentic-crawler = "agentic_crawler.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
