[package]
name = "acrawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "acrawl"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
crawler = { path = "../crawler" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
serde_json = "1"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[lints]
workspace = true
