[package]
name = "acrawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "acrawl"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
crawler = { path = "../crawler" }
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
runtime = { path = "../runtime" }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process"] }
ratatui = "0.30.0"
textwrap = "0.16"
pulldown-cmark = "0.13"
unicode-width = "0.2"

[lints]
workspace = true
