[package]
name = "acrawl-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MCP server exposing acrawl's high-level crawl capabilities to external agents"

[[bin]]
name = "acrawl-mcp-server"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
crawler = { path = "../crawler" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
