[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
base64 = "0.22"
browser = { path = "../browser" }
csv = "1"
regex = "1"
runtime = { path = "../runtime" }
script = { path = "../script" }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["sync", "time", "fs"] }
tokio-util = { version = "0.7", default-features = false }
url = "2"

[dev-dependencies]
async-trait = "0.1"
futures-util = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-tungstenite = "0.26"

[lints]
workspace = true
