[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sigv4 = { version = "1", features = ["sign-http"] }
azure_identity = { version = "0.34", optional = true }
base64 = "0.22"
gcp_auth = { version = "0.12", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
