[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sigv4 = { version = "1", features = ["sign-http"] }
azure_identity = { version = "0.34", optional = true }
base64 = "0.22"
gcp_auth = { version = "0.12", optional = true }
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
zeroize = { version = "1", features = ["derive"] }

[lints]
workspace = true
