[package]
name = "browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
runtime = { path = "../runtime" }
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
htmd = "0.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "sync", "time"] }
tokio-tungstenite = "0.26"

[lints]
workspace = true
