[package]
name = "browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
htmd = "0.5"
scraper = "0.22"
rand = "0.8"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "sync", "time"] }
tokio-tungstenite = "0.26"

[dev-dependencies]
axum = { version = "0.8", features = ["tokio"] }
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
