[package]
name = "crawler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent = { path = "../agent" }
browser = { path = "../browser" }
acrawl-core = { path = "../core" }

[dev-dependencies]
futures-util = "0.3"
runtime = { path = "../runtime" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-tungstenite = "0.26"

[lints]
workspace = true
