[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
agent = { path = "../agent" }
api = { path = "../api" }
crawler = { path = "../crawler" }
runtime = { path = "../runtime" }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
