[package]
name = "acrawl-processing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zip = "2"

[target.'cfg(unix)'.dependencies]
tar = "0.4"
bzip2 = "0.4"

[dependencies.pdf-extract]
version = "0.7"

[dependencies.calamine]
version = "0.26"
features = ["dates"]

[dependencies.image]
version = "0.25"

[dependencies.csv]
version = "1"

[dependencies.quick-xml]
version = "0.37"

[dependencies.whisper-rs]
version = "0.11"
optional = true

[dependencies.symphonia]
version = "0.5"
optional = true
features = ["mp3", "aac", "ogg", "flac", "wav", "isomp4", "all-codecs"]

[dependencies.hound]
version = "3"
optional = true

[features]
transcription = [
    "dep:whisper-rs",
    "dep:symphonia",
    "dep:hound",
]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
