[package]
name = "script"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[lints]
workspace = true
