[package]
name = "acrawl-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acrawl-core = { path = "../core" }
agent = { path = "../agent" }
api = { path = "../api" }
browser = { path = "../browser" }
commands = { path = "../commands" }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
render = { path = "../render" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
zeroize = "1"

[lints]
workspace = true
